# logos-app-auth-cognito

./: .bazelproject  .bazelrc  .gitignore  BUILD  MODULE.bazel  maven_install.json  package.json  pnpm-lock.yaml  tsconfig.json
app/auth/cognito/interceptor/cognito/: BUILD  CognitoServerInterceptor.java
app/auth/cognito/module/: BUILD  CognitoModule.java
app/auth/cognito/module/annotation/: BUILD
app/auth/cognito/proto/: BUILD
app/auth/cognito/service/: BUILD  CognitoService.java
app/auth/cognito/web/: BUILD
app/auth/cognito/web/components/: profile-button.ts
app/auth/cognito/web/module/: auth-module.ts
