module(
    name = "logos-app-auth-cognito",
    version = "0.0.1",
)

bazel_dep(name = "logos")
git_override(
    module_name = "logos",
    commit = "90e7e9802a71de6f18efd6babfe10335a0b5457b",
    init_submodules = True,
    remote = "https://github.com/logos-devs/logos",
)

bazel_dep(name = "protobuf", version = "26.0.bcr.2", repo_name = "com_google_protobuf")
git_override(
    module_name = "protobuf",
    commit = "9065e12e9131e8fb619c2f2e6fc05393f3568929",
    init_submodules = True,
    remote = "git@github.com:protocolbuffers/protobuf",
)

# pnpm
bazel_dep(name = "rules_nodejs", version = "6.3.0")
bazel_dep(name = "aspect_rules_js", version = "2.1.0")

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain()

npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
)
npm.npm_translate_lock(
    name = "npm_logos_app_auth_cognito",
    data = ["//:package.json"],
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    update_pnpm_lock = True,
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(
    npm,
    npm = "npm_logos_app_auth_cognito",
)

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

# rules_ts
bazel_dep(name = "aspect_rules_ts", version = "3.2.1")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps(
    name = "npm_typescript_logos_app_auth_cognito",  # naming works around bug in cross-workspace deps
    ts_integrity = "sha512-hjcS1mhfuyi4WW8IWtjP7brDrG2cuDZukyrYrSauoXGNgx0S7zceP07adYkJycEr56BOUTNPzbInooiN3fn1qw==",
    ts_version_from = "//:package.json",
)
use_repo(
    rules_ts_ext,
    npm_typescript = "npm_typescript_logos_app_auth_cognito",
)

# rules_jvm_external
bazel_dep(name = "rules_jvm_external", version = "6.5")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven_logos",
    artifacts = [
        # deps from the framework are merged with any deps specified here
        "io.jsonwebtoken:jjwt:0.12.3",
        "org.apache.httpcomponents.client5:httpclient5:5.2.2",
        "software.amazon.awssdk:cognitoidentityprovider:2.26.23",
    ],
    fail_if_repin_required = True,
    fetch_javadoc = True,
    fetch_sources = True,
    # REPIN=1 bazel run @maven_logos//:pin
    lock_file = "//:maven_install.json",
    repositories = [
        "https://repo.maven.apache.org/maven2/",
    ],
    version_conflict_policy = "pinned",
)
use_repo(maven, "maven_logos")

# aspect_bazel_lib
bazel_dep(
    name = "aspect_bazel_lib",
    version = "2.7.7",
)
